adding Sphinx documentation

--- a/src/ChartCraftHub/chapter_2.ipynb
+++ b/src/ChartCraftHub/chapter_2.ipynb
@@ -47,6 +47,12 @@
    "outputs": [],
    "source": [
     "def despine(axis: plt.Axes, which_spines: list = [\"top\", \"right\"]) -> plt.Axes:\n",
+    "    \"\"\"\n",
+    "    Remove the top and right spines from the axis.\n",
+    "    :param axis: \n",
+    "    :param which_spines: \n",
+    "    :return: \n",
+    "    \"\"\"\n",
     "    return axis.spines[which_spines].set_visible(False)\n",
     "\n",
     "def add_arrows_to_axis(axis: plt.Axes) -> plt.Axes:\n",
