--- a/src/chartcrafthub/chapter_2_0.ipynb
+++ b/src/chartcrafthub/chapter_2_0.ipynb
@@ -350,7 +350,7 @@
     "\n",
     "    def draw(self, fig, **kwargs):\n",
     "        if fig:\n",
-    "            axes = fig.get_axes()\n",
+    "            # axes = fig.get_axes()\n",
     "            ax = fig.get_axes()[-1]\n",
     "        else:\n",
     "            fig, ax = plt.subplots()\n",
