--- a/src/chartcrafthub/chapter_2_0.ipynb
+++ b/src/chartcrafthub/chapter_2_0.ipynb
@@ -23,8 +23,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-22T12:02:06.064294Z",
-     "start_time": "2024-03-22T12:02:05.591232Z"
+     "end_time": "2024-03-22T16:44:02.050261Z",
+     "start_time": "2024-03-22T16:44:01.445753Z"
     }
    },
    "outputs": [
@@ -117,8 +117,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-22T12:02:08.420277Z",
-     "start_time": "2024-03-22T12:02:08.362591Z"
+     "end_time": "2024-03-22T16:44:05.877703Z",
+     "start_time": "2024-03-22T16:44:05.788921Z"
     }
    },
    "outputs": [
@@ -163,7 +163,7 @@
     "collapsed": false
    },
    "source": [
-    "# TO-DO: add linear transformation examples from the math book."
+    "# A little bit of math"
    ]
   },
   {
@@ -224,12 +224,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-22T12:02:16.819971Z",
-     "start_time": "2024-03-22T12:02:16.816397Z"
+     "end_time": "2024-03-22T16:44:34.527812Z",
+     "start_time": "2024-03-22T16:44:34.522238Z"
     }
    },
    "outputs": [
