add missing figures

--- a/src/chartcrafthub/chapter_2_1.ipynb
+++ b/src/chartcrafthub/chapter_2_1.ipynb
@@ -677,6 +677,18 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "The result should look like this:\n",
+    "\n",
+    "<img src=\"./results/ex_2_3.png\" width=\"1200\">\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4348f6195b4c7583"
+  },
+  {
+   "cell_type": "markdown",
    "id": "e9f98f139b6a41c4",
    "metadata": {
     "collapsed": false
@@ -812,7 +824,7 @@
     "\n",
     "Let's get back to the common chart example that we've built in the previous chapter.\n",
     "\n",
-    "![common_chart](./results/common_chart.png)\n",
+    "<img src=\"./results/common_chart_xkcd.png\" width=\"1200\">\n",
     "\n",
     "There are a number of steps we did that are chart agnostic:\n",
     "* Adding labels to lines\n",
