--- a/src/chartcrafthub/chapter_2_0.ipynb
+++ b/src/chartcrafthub/chapter_2_0.ipynb
@@ -7,14 +7,15 @@
     "# 2. Efficient Figure Creation Tips: Abstracting Common Steps\n",
     "\n",
     "## In this section:\n",
-    "* We will learn A\n",
-    "* We will learn B\n",
-    "* We will learn C\n",
+    "* We'll learn how to abstract common steps of creating a figure.\n",
+    "* We'll implement our own abstractions to create complex figures with ease.\n",
+    "\n",
+    "Understanding these abstractions will help us to read the source code of advanced plotting libraries like `matplotlib` and `seaborn`.\n",
     "\n",
     "Let's start the exploration process.\n",
-    "You are given a list of `dino_vectors`, and we need to create a square figure (10cm * 10cm) with a grid and tickables, where each gid cell is (1cm * 1cm).\n",
+    "You are given a list of `dino_vectors,` we need to create a square figure (10cm * 10cm) with a grid and ticks, where each grid cell is (1inch * 1inch).\n",
     "\n",
-    "By the end of tutorial you'll learn how to create complex plots with ease. For example like this:"
+    "By the end of the tutorial, you'll learn how to create complex plots easily. For example like this:"
    ]
   },
   {
@@ -23,8 +24,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-22T16:44:02.050261Z",
-     "start_time": "2024-03-22T16:44:01.445753Z"
+     "end_time": "2024-03-23T06:50:46.844546Z",
+     "start_time": "2024-03-23T06:50:46.359725Z"
     }
    },
    "outputs": [
@@ -38,7 +39,7 @@
     }
    ],
    "source": [
-    "from abstractions import Plot, Point, Vector, Polygon\n",
+    "from chartcrafthub.abstractions import Plot, Point, Vector, Polygon\n",
     "\n",
     "# prepare the data\n",
     "dino_vectors = (\n",
@@ -98,15 +99,15 @@
    },
    "source": [
     "First, we import `Plot`, `Point`, `Vector`, and `Polygon` classes from the `abstractions` module.\n",
-    "* `Plot` is a class that abstracts the common steps of creating a figure.\n",
+    "* `Plot` is a class that abstracts the typical figure creation steps.\n",
     "* `Point` represents a point to draw.\n",
     "* `Vector` represents a vector to draw.\n",
     "* `Polygon` represents a polygon to draw.\n",
     "\n",
-    "With this four classes, we can create complex figures with ease.\n",
+    "With these four classes, we can create complex figures with ease.\n",
     "    \n",
     "We could ask ourselves a ton of questions, for example:\n",
-    "* How can we resize the figure to the proper size as we've learned in the previous section?\n",
+    "* As we've learned in the previous section, How can we resize the figure to the proper size?\n",
     "* Can we name the axes?\n",
     "* I don't generate figures without the title"
    ]
@@ -117,8 +118,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-22T16:44:05.877703Z",
-     "start_time": "2024-03-22T16:44:05.788921Z"
+     "end_time": "2024-03-23T06:50:46.946432Z",
+     "start_time": "2024-03-23T06:50:46.850045Z"
     }
    },
    "outputs": [
@@ -151,8 +152,8 @@
    },
    "source": [
     "The secret is that we've abstracted the common steps into a class `Plot` and the common objects into classes `Point`, `Vector`, and `Polygon`.\n",
-    "In the next sections we'll learn how to create these classes.\n",
-    "But for now let's just add a few more examples to fully understand the power of this abstraction.\n",
+    "In the following sections, we'll learn how to create these classes.\n",
+    "But for now, let's add a few more examples to fully appreciate the power of this abstraction.\n",
     "\n",
     "TO-DO: add linear transformation examples from the math book."
    ]
@@ -172,8 +173,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-22T12:02:14.841019Z",
-     "start_time": "2024-03-22T12:02:14.761129Z"
+     "end_time": "2024-03-23T06:50:47.013219Z",
+     "start_time": "2024-03-23T06:50:46.949058Z"
     }
    },
    "outputs": [
@@ -224,12 +225,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-22T16:44:34.527812Z",
-     "start_time": "2024-03-22T16:44:34.522238Z"
+     "end_time": "2024-03-23T06:50:47.020483Z",
+     "start_time": "2024-03-23T06:50:47.016295Z"
     }
    },
    "outputs": [
